@@ -45,7 +45,6 @@ import com.netflix.spinnaker.halyard.deploy.spinnaker.v1.service.distributed.Sid
 import com.netflix.spinnaker.halyard.deploy.spinnaker.v1.service.distributed.kubernetes.KubernetesService;
 import com.netflix.spinnaker.halyard.deploy.spinnaker.v1.service.distributed.kubernetes.KubernetesSharedServiceSettings;
 import com.netflix.spinnaker.halyard.deploy.spinnaker.v1.service.distributed.kubernetes.v2.KubernetesV2Utils.SecretMountPair;
-import io.fabric8.utils.Strings;
 import java.io.File;
 import java.nio.file.Paths;
 import java.util.ArrayList;
@@ -57,6 +56,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -94,12 +94,20 @@ public interface KubernetesV2Service<T> extends HasServiceSettings<T>, Kubernete
   }
 
   default List<String> getReadinessExecCommand(ServiceSettings settings) {
-    return Arrays.asList(
-        "wget",
-        "--no-check-certificate",
-        "--spider",
-        "-q",
-        settings.getScheme() + "://localhost:" + settings.getPort() + settings.getHealthEndpoint());
+    List<String> execCommandList = settings.getKubernetes().getCustomHealthCheckExecCommands();
+    if (execCommandList == null || execCommandList.isEmpty()) {
+      execCommandList =
+          Arrays.asList(
+              "wget",
+              "--no-check-certificate",
+              "--spider",
+              "-q",
+              settings.getScheme()
+                  + "://localhost:"
+                  + settings.getPort()
+                  + settings.getHealthEndpoint());
+    }
+    return execCommandList;
   }
 
   default boolean hasPreStopCommand() {
@@ -138,6 +146,7 @@ public interface KubernetesV2Service<T> extends HasServiceSettings<T>, Kubernete
     service.addBinding("type", settings.getKubernetes().getServiceType());
     service.addBinding("nodePort", settings.getKubernetes().getNodePort());
     service.addBinding("serviceLabels", settings.getKubernetes().getServiceLabels());
+    service.addBinding("serviceAnnotations", settings.getKubernetes().getServiceAnnotations());
 
     return service.toString();
   }
@@ -423,19 +432,18 @@ public interface KubernetesV2Service<T> extends HasServiceSettings<T>, Kubernete
 
   default TemplatedResource getProbe(ServiceSettings settings, Integer initialDelaySeconds) {
     TemplatedResource probe;
-    if (StringUtils.isNotEmpty(settings.getHealthEndpoint())) {
-      if (settings.getKubernetes().getUseExecHealthCheck()) {
-        probe = new JinjaJarResource("/kubernetes/manifests/execProbe.yml");
-        probe.addBinding("command", getReadinessExecCommand(settings));
-      } else {
-        probe = new JinjaJarResource("/kubernetes/manifests/httpProbe.yml");
-        probe.addBinding("port", settings.getPort());
-        probe.addBinding("path", settings.getHealthEndpoint());
-        probe.addBinding("scheme", settings.getScheme().toUpperCase());
-      }
-    } else {
+    if (StringUtils.isEmpty(settings.getHealthEndpoint())
+        || settings.getKubernetes().getUseTcpProbe()) {
       probe = new JinjaJarResource("/kubernetes/manifests/tcpSocketProbe.yml");
       probe.addBinding("port", settings.getPort());
+    } else if (settings.getKubernetes().getUseExecHealthCheck()) {
+      probe = new JinjaJarResource("/kubernetes/manifests/execProbe.yml");
+      probe.addBinding("command", getReadinessExecCommand(settings));
+    } else {
+      probe = new JinjaJarResource("/kubernetes/manifests/httpProbe.yml");
+      probe.addBinding("port", settings.getPort());
+      probe.addBinding("path", settings.getHealthEndpoint());
+      probe.addBinding("scheme", settings.getScheme().toUpperCase());
     }
     probe.addBinding("initialDelaySeconds", initialDelaySeconds);
     return probe;
@@ -752,8 +760,8 @@ public interface KubernetesV2Service<T> extends HasServiceSettings<T>, Kubernete
     return result;
   }
 
-  default String buildAddress(String namespace) {
-    return Strings.join(".", getServiceName(), namespace);
+  default Optional<String> buildAddress(String namespace) {
+    return Optional.of(String.join(".", getServiceName(), namespace));
   }
 
   default ServiceSettings buildServiceSettings(DeploymentConfiguration deploymentConfiguration) {
@@ -762,17 +770,13 @@ public interface KubernetesV2Service<T> extends HasServiceSettings<T>, Kubernete
     ServiceSettings settings = defaultServiceSettings(deploymentConfiguration);
     String location = kubernetesSharedServiceSettings.getDeployLocation();
     settings
-        .setAddress(buildAddress(location))
         .setArtifactId(getArtifactId(deploymentConfiguration))
         .setLocation(location)
         .setEnabled(isEnabled(deploymentConfiguration));
+    buildAddress(location).ifPresent(settings::setAddress);
     if (runsOnJvm()) {
       // Use half the available memory allocated to the container for the JVM heap
-      settings
-          .getEnv()
-          .put(
-              "JAVA_OPTS",
-              "-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=2");
+      settings.getEnv().put("JAVA_OPTS", "-XX:MaxRAMPercentage=50.0");
     }
     return settings;
   }
